# Goit

./: .gitignore  README.md
module10/great_quotes/: manage.py  migrate_from_mono.py  requirements.txt
module11/alembic/: env.py
module12/: alembic.ini  main.py  requirements.txt
module12/alembic/: env.py
module12/app/: schemas.py
module13/: example.env  main.py
module13/app/: schemas.py
module14/: docker-compose.yml  main.py  pyproject.toml  requirements.txt
module14/alembic/versions/: 11b13ab151d5_f.py  7beba515965f_add_avatar_column_to_users.py  ed5e5404e31f_initial_migration.py  fa8c8234cedf_add_avatar_column_to_user_model.py
module14/app/conf/: config.py
module14/app/repository/: contacts.py  users.py
module14/app/routes/: auth.py  contacts.py  users.py
module14/app/services/: Cloudinary.py  auth.py  mail.py
module14/docs/source/: conf.py  index.rst
module14/tests/: conftest.py  test.db  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
module2/: AbstractBasic.py  AddressBook.py  Dockerfile  pyproject.toml
module3/: factorize.py  filesorter.py  logger.py
module4/storage/: data.json
module5/: main.py  server.py  test.py
module7/: alembic.ini  main.py  queries.py
module7/app/: db.py  db_models.py
module7/seed/: make_fake_datas.py
module8/: .ENV
module8/Part_1/: connect.py  load_to_db.py  main.py  models.py
module8/Part_2/: consumer.py  models.py  producer.py
module9/my_quote_scrap/: authors.json  load_to_db.py  main.py  quotes.json
module9/quote_scrap/: scrapy.cfg
(+55 files in other folders)
